--- a/News.html
+++ b/News.html
@@ -11,7 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
+<meta name="keywords" content=" shangde,intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -64,7 +64,7 @@
 	<!--end-breadcrumbs-->
 	<!--typo-starts-->
 	<div class="pages" id="pages">
-		<div class="container">
+		<div class="container"  style="margin-top: -5%">
 			<div class="typo-top heading">
 				<h2>新闻中心</h2>
 			</div>
@@ -75,23 +75,39 @@
 						<table class="table">
 						  <tbody>
 							<tr>
-							  <td><h4 class="head" id="h1.-bootstrap-heading">尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。<a class="anchorjs-link" href="#h1.-bootstrap-heading"><span class="anchorjs-icon"><td class="type-info">详情</td></span></a></h4></td>
+							  <td><h4 class="head" id="h1.-bootstrap-heading">近期华为发布的荣耀Magic展示了强大的人工智能（AI）技术Magic Live，无论是在生活还是工作方面都能主动为用户提供建议，比如它能对信息进行智能解读，自动列出回答供用户选择。能主动识别并且记忆聊天中的陌生号码，避免因忘记存储号码而显得尴尬，更能自动识别聊天中的日程信息，自动弹出“添加到日历”等。这些新特性实际上谷歌在Android 7.0中新推出的谷歌助理（Google Assistant）已经支持，华为所做的是将它变得更本土化，最重要的是让国人能够正常使用。
+
+另外据说三星也筹备为Galaxy S8推出AI语音助理，而且还有男女性别之分，甚至支持通过语音支付。此外近期微软还在Android平台上更新了Cortana 2.0，据悉本次迭代以跨平台、高效率、人性化为核心理念，以非监督式深度神经网络为核心技术，使得Cortana更像真实的个人助理。
+<a class="anchorjs-link" href="#h1.-bootstrap-heading"><span class="anchorjs-icon"><td class="type-info">详情</td></span></a></h4></td>
 							  
 							</tr>
 							<tr>
-							  <td><h4 class="head" id="h2.-bootstrap-heading">尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。<a class="anchorjs-link" href="#h2.-bootstrap-heading"><span class="anchorjs-icon"></span></a></h4></td>
+							  <td><h4 class="head" id="h2.-bootstrap-heading">未来5年内：
+380亿美元：智能电表市场
+370亿美元：远程智能控制市场
+740亿美元：远程智能家庭安防市场
+全世界截止2020年，将安装7.8亿只智能电表;到2018年，将使用8亿台智能路由器;到2021年，280亿台智能设备将被使用。以上这些数据也许扯得太远，看下我们脚下的2017年将发生哪些变化?
+<h4 class="head" id="h2.-bootstrap-heading">
+智能家居服务业将开始崛起
+鉴证智能家居服务崛起的时刻到了，随着民众智能意识被不断教育，消费者对于智能服务的意识越来越强，加之海量智能设备入户互联后，能提供更优质服务与解决方案的服务商将占得先机。@Zorro：掐指一算，今年国内大平台肯定会强强联合，加强服务落地商的把控力，而不是像以前只注重企业间的生态连接，最终我们的目的都是要落地。
+</h4>
+<h4>
+高度智能集成性的需求
+消费者希望单设备或者单系统就可以解决/操控身边的智能家居事务，以获得便捷性。@Zorro：想想以前我们要实现导航，需要什么?我的车需要配一台GPS、一台照相机、一台录像机、一台CD机、更别说还需要一部老式手机。而今天，我只需要一台智能手机!
+</h4>
+<a class="anchorjs-link" href="#h2.-bootstrap-heading"><span class="anchorjs-icon"></span></a></h4></td>
 							  <td class="type-info">详情</td>
 							</tr>
 							<tr>
-							  <td><h4 class="head" id="h4.-bootstrap-heading">尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。<a class="anchorjs-link" href="#h4.-bootstrap-heading"><span class="anchorjs-icon"></span></a></h4></td>
-							  <td class="type-info">详情</td>
-							</tr>
-							<tr>
-							  <td><h4 class="head" id="h5.-bootstrap-heading">借助尙德集团已建立并拥有的一个联络全国各地众多的生产供应商的广泛网络，尙德已成为施耐德、ABB、西门子、海格、飞利浦、欧司朗、罗格朗、博世电动工具等国际国内著名厂商的一级经销商。<a class="anchorjs-link" href="#h5.-bootstrap-heading"><span class="anchorjs-icon"></span></a></h4></td>
-							  <td class="type-info">详情</td>
-							</tr>
-							<tr>
-							  <td><h4 class="head">尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。</h4</td>
+							  <td><h4 class="head" id="h4.-bootstrap-heading">Rapael智能手套
+这款由Neofect公司推出的白色智能手套，正式名称为“Rapael Smart Glove”，可以包裹在患者手上，而手指处和腕部都装有活动与方位传感器。一款通过蓝牙连接的安卓应用可以让用户玩游戏或从事其他活动，帮助他们加强双手和手臂肌肉力量。
+<h4 class="head" id="h4.-bootstrap-heading">
+欧洲、亚洲和美国的医院和康复中心已经在使用Rapael智能手套，帮助中风患者康复。在2017年国际消费电子展（CES 2017）上，Neofect向就诊不便的中风患者极力推荐Rapael智能手套。患者能以每个月99美元的价格，租用这款获FDA批准的智能手套和配对安卓平板电脑，以后他们足不出户就可以进行手部和腕部康复训练。
+</h4>
+<h4 class="head" id="h4.-bootstrap-heading">
+在中风或是遭受外伤性脑损伤后，人们会丧失对四肢或身体其他肌肉的控制。根据美国疾病控制中心（CDC）的数据，美国每年大概有79.5万人患上中风，这种疾病会造成长期的伤残。有些中风患者会完全丧失肌肉控制能力——Rapael智能手套也只是对那些至少双手有活动能力的患者有帮助。
+</h4>
+<a class="anchorjs-link" href="#h4.-bootstrap-heading"><span class="anchorjs-icon"></span></a></h4></td>
 							  <td class="type-info">详情</td>
 							</tr>
 						  </tbody>
