--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
+<meta name="keywords" content="shangde,intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
