--- a/detail1-products.html
+++ b/detail1-products.html
@@ -11,8 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Luxury Watches Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="shangde,intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -348,34 +347,49 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="tabs">
 					<ul class="menu_drop">
-				<li class="item1"><a href="#"><img src="images/arrow.png" alt="">尙德公司简介</a>
+				<li class="item1"><a href="#"><img src="images/arrow.png" alt="">详细信息</a>
 					<ul>
-						<li class="subitem1"><a href="#">尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。</a></li>
-						<li class="subitem2"><a href="#">作为全国最大的面向承包商和工业用户的低压产品经销商，不仅可以提供建筑安装行业产品供应、技术、物流方面的服务，更可以给重点项目提供设计整合，关键技术整合，通过自有核心技术使项目呈现极致完美感观。
-						</a></li>
-						<li class="subitem3"><a href="#">公司在正式员工入职6个月，优秀员工即可申请成为公司事业合伙人或者申请购买公司股份，如此激励制度给员工带来更大的工作动力。</a></li>
+						<li class="subitem1"><a href="#">V1707 V.touch 系列
+v.Touch 采用全触摸技术，带来全新的触控体验；使用高清数字液晶显示屏，拥有800×480分辨率，显示画面赏心悦目；创新高清数码相框，MP3铃声自定义，精美时钟、日历、彩信接收等功能，增添家居娱乐体验。</a></li>
 					</ul>
 				</li>
-				<li class="item2"><a href="#"><img src="images/arrow.png" alt="">尙德的服务市场</a>
+				<li class="item2"><a href="#"><img src="images/arrow.png" alt="">技术特性</a>
 					<ul>
-					    <li class="subitem2"><a href="#"> 尙德主要服务于三大市场的新建、改造、维修替换项目：</a></li>
-						<li class="subitem3"><a href="#">住宅建筑：尙德提供完善的产品，包括气候调节、安防产品及家用自动设备等，高质量的服务极具竞争力。 </a></li>
-						<li class="subitem3"><a href="#">工业市场：包括系统集成商，设备制造商，生产基地等。不断提供给客户更优质的服务是蓝格赛永远追求的目标。 </a></li>
+					    <li class="subitem2"><a href="#"> PMMA材质，流线型设计，尽显简约本色；
+全屏触摸，界面友好，操作简单；
+高清数字液晶显示屏，画质精细；
+具有监视、对讲、开锁、呼叫管理中心、紧急报警、八方去等安防功能；
+新增访客图像存储、高清数码相框、闹钟、自选MP3铃声，彩信接收、防拆报警等功能；
+32位数字处理器，运行速度快，数据处理能力强；
+采用六层PCB板设计，抗干扰能力强；双面回流SMT工艺，集成度高；
+产品提升静电（ESD)防护、PCB设计和防雷（SUREG浪涌保护）电路新能，技术指标超越行业标准。</a></li>
 						<li class="subitem3"><a href="#">非住宅类：同时尙德也向购物中心、体育设施、机场、医院等承建项目的电气安装商提供全方位产品及专业的服务。 </a></li>
 					</ul>
 				</li>
-				<li class="item3"><a href="#"><img src="images/arrow.png" alt="">尙德在中国</a>
+				<li class="item3"><a href="#"><img src="images/arrow.png" alt="">产品特性</a>
 					<ul>
-						<li class="subitem1"><a href="#">借助尙德集团已建立并拥有的一个联络全国各地众多的生产供应商的广泛网络，尙德已成为施耐德、ABB、西门子、海格、飞利浦、欧司朗、罗格朗、博世电动工具等国际国内著名厂商的一级经销商。
+						<li class="subitem1"><a href="#">32位处理器，Linux操作系统，运行速度快，数据处理能力强；
+具有火灾联动报警功能；
+具有访客图像存储、高清数码相框、闹钟、自选MP3铃声、防拆报警等功能；
+具有监视、对讲、开锁、呼叫管理中心、八防区报警等功能；
+全屏触摸，界面友好，操作简单；
+高清数字液晶显示屏，画质精细；
+ABS材质，流线型设计，尽显简约本色；
+采用六层PCB板设计，抗干扰能力强，双面回流SMT工艺，集成度高；
+产品提升静电（ESD）防护，防雷电路性能，技术指标超越行业标准。
 </a></li>
 						<li class="subitem2"><a href="#"> 目前，尙德已成为了北京市场上第一家电气产品系列齐全的经销商，也是迄今为止唯一一家能够提供专业附加值服务的经销商。</a></li>
 						<!-- <li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li> -->
 					</ul>
 				</li>
-				<li class="item4"><a href="#"><img src="images/arrow.png" alt="">尙德中国战略</a>
+				<li class="item4"><a href="#"><img src="images/arrow.png" alt="">联系我们</a>
 					<ul>
-					    <li class="subitem2"><a href="#"> 从尙德投资策略来讲，目标就是在当地取得市场排名第一或者第二的位置，如果在当地只是个微不足道的竞争者的话，那么这个对于尙德来将是丝毫没有意义的。同时，中国的文化、市场环境、消费习惯跟其它国家都有显著的差异，中国的普通消费者甚至低压电器行业的专业客户对尙德的品牌及实力不甚了解，尙德在中国的发展还面临着品牌推广的问题，需要通过不同的方式向中国的客户展示尙德的品牌实力和运营方式，培植客户对尙德的认知。从这二点看来，尙德在中国的现状离其战略目标还相差较远。</a></li>
-						<li class="subitem3"><a href="#">我们坚信，凭借着雄厚的实力与独特的核心竞争力，随着适应中国特色的商业模式的探索和确立，以及能够理解和把握集团理念和中国市场特性的高效团队的形成，尙德一定能在中国创造出辉煌业绩，成为引领和提升中国低压电器营销行业的领导者。 </a></li>
+					    <li class="subitem2"><a href="#"> 
+						MOB:+18310642358
+					    </a></li>
+						<li class="subitem3"><a href="#">
+						Tel:+861065452081-814
+						 </a></li>
 					</ul>
 				</li>
 				<!-- <li class="item5"><a href="#"><img src="images/arrow.png" alt="">Make A Gift</a>
@@ -395,11 +409,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="product-bottom">
 									<h3>Smart Watches</h3>
 									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
+									<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 								</div>
-								<div class="srch">
+								<!-- <div class="srch">
 									<span>-50%</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-4 product-left p-left"> 
@@ -408,11 +422,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="product-bottom">
 									<h3>Smart Watches</h3>
 									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
+									<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 								</div>
-								<div class="srch">
+								<!-- <div class="srch">
 									<span>-50%</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-4 product-left p-left"> 
@@ -421,11 +435,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="product-bottom">
 									<h3>Smart Watches</h3>
 									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
+									<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 								</div>
-								<div class="srch">
+								<!-- <div class="srch">
 									<span>-50%</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -435,7 +449,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-3 single-right">
 					<div class="w_sidebar">
 						<section  class="sky-form">
-							<h4>代理经销商</h4>
+							<h4>品牌</h4>
 							<div class="row1 scroll-pane">
 								<div class="col col-4">
 									<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>罗格朗</label>
@@ -448,24 +462,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</section>
 						<section  class="sky-form">
-							<h4>品牌</h4>
+							<h4>产品种类</h4>
 							<div class="row1 row2 scroll-pane">
 								<div class="col col-4">
-									<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>视得安</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i></label>
 								</div>
 								<div class="col col-4">
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sonata</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Titan</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Casio</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Omax</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>shree</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>智能家居</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>开关插座</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>楼宇对讲</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>门禁</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>火灾报警</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fastrack</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sports</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fossil</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Maxima</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Yepme</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Citizen</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Diesel</label>			
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Diesel</label>									
 								</div>
 							</div>
 						</section>
