--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
+<meta name="keywords" content=" shangde,intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -51,7 +51,7 @@
 	</div>
 	<!--prdt-starts-->
 	<div class="prdt"> 
-		<div class="container">
+		<div class="container" style="margin-top: -3%;">
 			<div class="prdt-top">
 				<div class="col-md-9 prdt-left">
 					<div class="product-one">
@@ -155,17 +155,17 @@
 							</div>
 						</section>
 						<section  class="sky-form">
-							<h4>品牌</h4>
+							<h4>产品种类</h4>
 							<div class="row1 row2 scroll-pane">
 								<div class="col col-4">
 									<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i></label>
 								</div>
 								<div class="col col-4">
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>视得安</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Titan</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Casio</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Omax</label>
-									<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>shree</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>智能家居</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>开关插座</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>楼宇对讲</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>门禁</label>
+									<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>火灾报警</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fastrack</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sports</label>
 									<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fossil</label>
