--- a/about.html
+++ b/about.html
@@ -11,8 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Luxury Watches Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -23,51 +22,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery.easydropdown.js"></script>			
 </head>
 <body> 
-	<!--top-header-->
-	<!-- <div class="top-header">
-		<div class="container">
-			<div class="top-header-main">
-				<div class="col-md-6 top-header-left">
-					<div class="drop">
-						<div class="box">
-							<select tabindex="4" class="dropdown drop">
-								<option value="" class="label">Dollar :</option>
-								<option value="1">Dollar</option>
-								<option value="2">Euro</option>
-							</select>
-						</div>
-						<div class="box1">
-							<select tabindex="4" class="dropdown">
-								<option value="" class="label">English :</option>
-								<option value="1">English</option>
-								<option value="2">French</option>
-								<option value="3">German</option>
-							</select>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-md-6 top-header-left">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							 <div class="total">
-								<span class="simpleCart_total"></span></div>
-								<img src="images/cart-1.png" alt="" />
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div> -->
-	<!--top-header-->
-	<!--start-logo-->
-	<!-- <div class="logo">
-		<a href="index.html"><h1>尙德</h1></a>
-	</div> -->
-	<!--start-logo-->
 	<!--bottom-header-->
 	<div class="header-bottom">
 		<div class="container">
@@ -77,135 +31,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="memenu skyblue">
 					<li><a href="index.html" style="font-size: 36px;font-weight: bold;font-family: "隶书"">BDT-尙德</a></li>
 					<li class="active"><a href="index.html">首页</a></li>
-
 						<li class="grid"><a href="about.html">关于我们</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>		
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products.html">样板工程</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>品牌</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products-2.html">产品</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="News.html">资讯</a>
 						</li>
@@ -215,12 +45,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<!-- <div class="col-md-3 header-right"> 
-				<div class="search-bar">
-					<input type="text" value="Search" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search';}">
-					<input type="submit" value="">
-				</div>
-			</div> -->
 			<div class="clearfix"> </div>
 			</div>
 		</div>
@@ -233,9 +57,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="rslides" id="slider4">
 			    <li>
 					<div class="banner1">
-						<div class="ban-box" style="width:40%;height:30%;opacity:0.6;background-color:#000;position: absolute;top:30%;left:5%">
-								<h2 class="ban" style="color:#fff;padding-top:5%;
-							padding-left:18%;font-weight: bold;font-family: "隶书";>尙德股份公司简介</h2>
+						<div class="ban-box" style="width:60%;height:30%;opacity:0.6;background-color:#000;position: absolute;top:30%;left:8%">
+								<h2 class="ban" style="color:#fff;padding-top:-100%;
+							padding-left:18%;font-weight: bold;width:100%;font-family: "隶书";>尙德股份公司简介</h2>
 						</div>
 					</div>
 				</li>
@@ -271,146 +95,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--about-starts-->
     <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站模板</a></div>
 	<!--about-end-->
-	<!--product-starts-->
-	<!-- <div class="product"> 
-		<div class="container">
-			<div class="product-top">
-				<div class="product-one">
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-1.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-2.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-3.png"  alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-4.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="product-one">
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-5.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-6.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-7.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-8.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>					
-			</div>
-		</div>
-	</div> -->
-	<!--product-end-->
 	<!-- News start -->
 	<div class="news" style="width:100%;height:400px;">
-		<h1 style="width: 60%;margin-left: 16%;">尙德股份简介</h1>
+		<h1 style="width: 80%;margin-left: 16%;">尙德股份简介</h1>
 		<div class="news-about">
 			<h4 style="width: 70%;
 	margin:0 auto;margin-bottom:1%;">
 				尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。
 			</h4>
 			<h4 style="width: 70%;
-	margin:0 auto;margin-bottom:3%;">作为全国最大的面向承包商和工业用户的低压产品经销商，不仅可以提供建筑安装行业产品供应、技术、物流方面的服务，更可以给重点项目提供设计整合，关键技术整合，通过自有核心技术使项目呈现极致完美感观。</h4>
+	margin:0 auto">作为全国最大的面向承包商和工业用户的低压产品经销商，不仅可以提供建筑安装行业产品供应、技术、物流方面的服务，更可以给重点项目提供设计整合，关键技术整合，通过自有核心技术使项目呈现极致完美感观。</h4>
 		</div>
 		<div class="news-detail" >
-			<div class="container" style="width: 80%;height:200px;margin:0 auto">
-				<div class="img-box" style="width: 90%;height:230px;margin:0 auto;">
-					<img src="images/42-32397212-1440x588.jpg" alt="" style="width: 100%;height:230px;">
+			<div class="container">
+				<div class="about"> 
+				<div class="container">
+					<div class="about-top grid-1">
+						<img class="img-responsive" src="images/42-32397212-1440x588.jpg" alt="" style="width: 80%;height:200px;margin-left:10%;"/>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- News end -->
-	<div class="news" style="width:100%;height:400px; margin-top: 5% ;margin-bottom:4% ">
-		<h1 style="width: 70%;margin-left: 16%;">尙德服务市场</h1>
+	<div class="news" style="width:100%;height:400px;margin-bottom:4% ">
+		<h1 style="width: 70%;margin-left: 16%;margin-top: -2%;">尙德服务市场</h1>
 		<div class="news-about">
 			<h4 style="width: 70%;
 	margin:0 auto;margin-bottom:1%;">
@@ -431,23 +140,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="news-detail" >
 			<div class="container" style="width: 90%;height:200px;margin:0 auto">
-				<div class="img-box" style="width: 80%;height:250px;margin:0 auto;">
-					<img src="images/509464923-1440x588.jpg" alt="" style="width: 100%;height:240px;">
-				</div>
-			   
-				<!-- <ul>
-					<li style="float: none;">
-						<a href="">
-							
-						</a>
-					</li>
-				</ul> -->
+						<div class="about"> 
+				<div class="container">
+					<div class="about-top grid-1">
+								<img class="img-responsive" src="images/509464923-1440x588.jpg" alt="" style="width: 80%;height:200px;margin-left:10%;"/></div>
+			</div>
 			</div>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<div class="news" style="width:100%;height:400px;">
-		<h1 style="width: 60%;margin-left: 16%;">尙德在中国</h1>
+	<div class="news" style="width:100%;height:300px;">
+		<h1 style="width: 60%;margin-left: 16%;margin-top:6%;">尙德在中国</h1>
 		<div class="news-about">
 			<h4 style="width: 70%;
 	margin:0 auto;margin-bottom:1%;">
@@ -456,9 +159,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h4 style="width: 70%;
 	margin:0 auto;margin-bottom:1%;">目前，尙德已成为了北京市场上第一家电气产品系列齐全的经销商，也是迄今为止唯一一家能够提供专业附加值服务的经销商。</h4>
 	<h4 style="width: 70%;
-	margin:0 auto;margin-bottom:1%;">从尙德投资策略来讲，目标就是在当地取得市场排名第一或者第二的位置，如果在当地只是个微不足道的竞争者的话，那么这个对于尙德来将是丝毫没有意义的。同时，中国的文化、市场环境、消费习惯跟其它国家都有显著的差异，中国的普通消费者甚至低压电器行业的专业客户对尙德的品牌及实力不甚了解，尙德在中国的发展还面临着品牌推广的问题，需要通过不同的方式向中国的客户展示尙德的品牌实力和运营方式，培植客户对尙德的认知。从这二点看来，尙德在中国的现状离其战略目标还相差较远。</h4>
+	margin:0 auto;margin-bottom:1%;">从尙德投资策略来讲，目标就是在当地取得市场排名第一或者第二的位置，如果在当地只是个微不足道的竞争者的话，那么这个对于尙德来将是丝毫没有意义的。</h4>
 	<h4 style="width: 70%;
 	margin:0 auto;margin-bottom:1%;">我们坚信，凭借着雄厚的实力与独特的核心竞争力，随着适应中国特色的商业模式的探索和确立，以及能够理解和把握集团理念和中国市场特性的高效团队的形成，尙德一定能在中国创造出辉煌业绩，成为引领和提升中国低压电器营销行业的领导者。</h4>
+		</div>
+		<div class="news" style="width:100%; margin-top: 5% ;margin-bottom:4% ">
+		<h1 style="width: 70%;margin-left: 16%;"></h1>
+		<div class="news-about">
+			<h4 style="width: 70%;margin:0 auto;margin-bottom:1%;"></h4>
+			<h4 style="width: 70%;margin:0 auto;margin-bottom:1%;"
 		</div>
 		<div class="clearfix"> </div>
 	</div>
