--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
+<meta name="keywords" content="shangde,intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -56,33 +56,33 @@
 			<ul class="rslides" id="slider4">
 			    <li>
 					<div class="banner">
-						<div class="ban-box" style="width:40%;height:50%;position: absolute;top:10%;left:5%">
+						<div class="ban-box" style="width:80%;height:50%;position: absolute;top:10%;left:5%">
 								<h2 class="ban" style="color:#000;padding-top:3%;
-							padding-left:6%;font-weight: bold;font-family: "隶书";">品牌理念：尙至若水  德行天下</h2>
-								<h2 class="ban" style="color:#000;padding-top:2%;
-							padding-left:6%;font-weight: bold;font-family: "隶书"">公司理念：智电整合 极致体现</h2>
+							padding-left:6%;font-weight: bold;font-family: "隶书";">尙至若水  德行天下</h2>
+								<h2 class="ban" style="color:#000;
+							padding-left:6%;font-weight: bold;font-family: "隶书"">智电整合 极致体现</h2>
 						</div>
 						
 					</div>
 				</li>
 				<li>
 					<div class="banner1">
-						<div class="ban-box" style="width:40%;height:50%;
+						<div class="ban-box" style="width:80%;height:50%;
 						position: absolute;top:10%;left:5%">
 								<h2 class="ban" style="color:#000;padding-top:3%;
-							padding-left:6%;font-weight: bold;font-family: "隶书"">品牌理念：尙至若水  德行天下</h2>
-								<h2 class="ban" style="color:#000;padding-top:2%;
-							padding-left:6%;font-weight: bold;font-family: "隶书"">公司理念：智电整合 极致体现</h2>
+							padding-left:6%;font-weight: bold;font-family: "隶书"">尙至若水  德行天下</h2>
+								<h2 class="ban" style="color:#000;
+							padding-left:6%;font-weight: bold;font-family: "隶书"">智电整合 极致体现</h2>
 						</div>
 					</div>
 				</li>
 				<li>
 					<div class="banner2">
-						<div class="ban-box" style="width:40%;height:50%;position: absolute;top:10%;left:5%">
+						<div class="ban-box" style="width:80%;height:50%;position: absolute;top:10%;left:5%">
 								<h2 class="ban" style="color:#000;padding-top:3%;
-							padding-left:6%;font-weight: bold;font-family: "隶书"">品牌理念：尙至若水  德行天下</h2>
-								<h2 class="ban" style="color:#000;padding-top:2%;
-							padding-left:6%;font-weight: bold;font-family: "隶书"">公司理念：智电整合 极致体现</h2>
+							padding-left:6%;font-weight: bold;font-family: "隶书"">尙至若水  德行天下</h2>
+								<h2 class="ban" style="color:#000;
+							padding-left:6%;font-weight: bold;font-family: "隶书"">智电整合 极致体现</h2>
 						</div>
 					</div>
 				</li>
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 	<!--about-end-->
-	<h2 style="width: 60%;margin-left: 12%;">新闻中心</h2>
+	<h2 style="width: 60%;margin-left: 12%;margin-top:-1%;">新闻中心</h2>
 		<div class="news-about">
 			<h4 style="width: 80%;margin: 0 auto;">
 				尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。
